[package]
name = "embassy-test"
version = "0.1.0"
authors = ["Christian Heussy <heussy@amazon.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.12.0", features = [
    "embassy",
    "embassy-time-systick",
] }
esp-backtrace = { version = "0.8.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
embassy-executor = { version = "0.3.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }
embassy-time = { version = "0.1.3", features = ["nightly"] }

esp-println = { version = "0.6.0", features = ["esp32c3", "log"] }
log = { version = "0.4.18" }
esp-alloc = { version = "0.3.0" }
static_cell = { version = "1.2.0", features = ["nightly"] }
